# sealwatch

./: .gitignore  pyproject.toml
docs/: requirements.txt
experiments/: prepare_boss.py  prepare_dataset.py  testing.ipynb
experiments/B0/: README.md  pyproject.toml  test_b0.py
experiments/B0/src/: example.py
sealwatch/: __init__.py
sealwatch/xunet/: __init__.py  _fabrika.py  b0.py  dataset.py  default_model.pt  model.py  prepare_boss.py  prepare_dataset.py  test.py  tmp.py  train.py  utils.py
test/: test_xunet.py
